--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -8,26 +9,13 @@
     body {
       font-family: normal;
       padding: 0px;
-      border: 1px solid #0ab7b2;
+      border: 0.5px solid #444;
+      background: #111;
       border-radius: 5px;
-      height: 680px;
+      height: 660px;
     }
 
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      border-bottom: 1px solid #0ab7b2;
-    }
 
-    header .center {
-      font-weight: bold;
-      font-size: 18px;
-      color: #0ab7b2;
-      text-align: left;
-      margin: 0;
-    }
 
     .container {
       max-width: 800px;
@@ -51,8 +39,8 @@
     .stat-box {
       width: 70px;
       height: 70px;
-      border: 1px solid #0ab7b2;
-      background: #33043c;
+      border: 1px solid #777;
+      background: #333;
       color: #fff;
       padding: 5px;
       font-size: 12px;
@@ -75,11 +63,13 @@
       height: 250px;
       margin: 10px 0;
       padding: 10px;
+      background: #222;
       font-size: 16px;
+      color: #fff;
       box-sizing: border-box;
       border-radius: 4px;
       resize: none;
-      border: 1px solid #0ab7b2;
+      border: 1px solid #444;
     }
 
     .stats-bottom .box {
@@ -98,7 +88,7 @@
     .stats-bottom .item {
       flex: 1;
       text-align: center;
-      background: #33043c;
+      background: #333;
       color: #fff;
       border-radius: 10px;
       padding: 0px;
@@ -113,16 +103,21 @@
       font-size: 1.2em;
       color: #fff;
     }
+    
+        header{margin-top:-2px; solid var(--border);display:flex;gap:10px;align-items:center; font-family:Normal; margin-bottom: 10px;}
+    header h1{font-size:16px;margin:0;font-weight:700; color:#fff; }
+    header .badge{font-size:11px;color:#02c302; background:#0a0a0a;border:1px solid #123a18;padding:2px 6px;border-radius:999px}
   </style>
 </head>
 <body>
-
-  <header>
-    <div class="center">Penghitung Karakter</div>
-  </header>
+     <header>
 
   <main>
     <div class="container">
+  <header>
+    <h1>Penghitung Karakter</h1>
+    <span class="badge">Teks • unicode character</span>
+  </header>
       <div class="stats-top">
         <div class="stat-box">
           <p>Kata</p>
@@ -144,7 +139,7 @@
 
       <div style="position: relative;">
         <textarea id="input" placeholder="Ketik atau salin dan tempel teks Anda di sini." style="padding-bottom: 40px;"></textarea>
-        <button onclick="clearText()" style="position: absolute; bottom: 20px; right: 8px; padding: 6px 15px; background-color: #0ab7b2; color: white; border: none; border-radius: 4px; cursor: pointer;">Clear</button>
+        <button onclick="clearText()" style="position: absolute; bottom: 20px; right: 8px; padding: 6px 15px; background:linear-gradient(180deg,#b72900,#571400); color: white; border: none; border-radius: 4px; cursor: pointer;">Clear</button>
       </div>
 
       <div class="stats-bottom">
